tests/core/snapshots/test-grpc-optional.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type News {
  body: String!
  id: Int!
  postImage: String!
  title: String!
}

type NewsData {
  news: [News]
}

type Query {
  news: NewsData
}

schema {
  query: Query
}
