tests/core/snapshots/test-http-tmpl.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  id: Int
  user: User
  @http(
    url: "http://jsonplaceholder.typicode.com/users"
    query: [{ key: "id", value: "{{.value.userId}}" }]
  )
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}

type User {
  id: Int
  name: String
}
