tests/core/snapshots/test-inline-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type A {
  b: B
}

type B {
  c: String
}

type Foo {
  a: A
}

type Query @addField(name: "foo", path: ["foo", "a", "0", "b"]) {
  foo: [Foo]
  @http(url: "http://jsonplaceholder.typicode.com/foo")
  @modify(omit: true)
}
